---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES = {}

do
    __DARKLUA_BUNDLE_MODULES.a = 2
end
do
    local constant = __DARKLUA_BUNDLE_MODULES.a

    __DARKLUA_BUNDLE_MODULES.b = constant + constant
end

local value = __DARKLUA_BUNDLE_MODULES.b

